--- a/db/configurations/goodmoves/partials/search-form.hbs
+++ b/db/configurations/goodmoves/partials/search-form.hbs
@@ -1,7 +1,7 @@
 {{#*inline "term_checkbox"}}
   <div class="mdc-form-field">
     <div class="mdc-checkbox">
-      <input type="checkbox" class="mdc-checkbox__native-control" id="<!--{instance}-->_{{field}}_{{key}}" 
+      <input type="checkbox" class="mdc-checkbox__native-control" id="<!--{instance}-->_{{field}}_{{key}}"
         name="{{field}}[]" value="{{key}}" {{#if (contains selected key)}}checked{{/if}} />
       <div class="mdc-checkbox__background">
         <svg class="mdc-checkbox__checkmark"
@@ -81,17 +81,17 @@
     {{#each data.supplimentaryResponses.types.aggregations.roles.buckets ~}}
       {{> term_checkbox key=key field="roles" selected=../request.params.query.roles}}
     {{/each ~}}
-    
+
     <h3 class="mdc-drawer__content-heading mdc-theme--primary-bg mdc-theme--on-primary">Sectors</h3>
     {{#each data.supplimentaryResponses.types.aggregations.sectors.buckets ~}}
-      {{> term_checkbox key=key field="sectors" selected=../request.params.query.roles}}
+      {{> term_checkbox key=key field="sectors" selected=../request.params.query.sectors}}
     {{/each ~}}
-    
+
     <h3 class="mdc-drawer__content-heading mdc-theme--primary-bg mdc-theme--on-primary">Statuses</h3>
     {{#each data.supplimentaryResponses.types.aggregations.statuses.buckets ~}}
-      {{> term_checkbox key=key field="statuses" selected=../request.params.query.roles}}
+      {{> term_checkbox key=key field="statuses" selected=../request.params.query.statuses}}
     {{/each ~}}
-    
+
     <button class="mdc-button mdc-button--raised mdc-button--fullwidth h-margin v-margin" type="submit">
       Search jobs
     </button>
