--- a/db/configurations/digitalparticipation/layouts/default.hbs
+++ b/db/configurations/digitalparticipation/layouts/default.hbs
@@ -32,7 +32,7 @@
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'UA-3467930-19', { 'send_page_view': true });
+  gtag('config', 'UA-3467930-19', { 'send_page_view': true, 'anonymize_ip': true });
 
   {{#if request.params.query.debug ~}}
   console.log('#### DEBUG MODE ON ####');
