--- a/db/configurations/humanrightsdeclaration/layouts/default.hbs
+++ b/db/configurations/humanrightsdeclaration/layouts/default.hbs
@@ -31,7 +31,7 @@
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'UA-3467930-28', { 'send_page_view': true });
+  gtag('config', 'UA-3467930-28', { 'send_page_view': true, 'anonymize_ip': true });
 
   {{#if request.params.query.debug ~}}
   console.log('#### DEBUG MODE ON ####');
