Added new charity awards text to home page

--- a/db/configurations/scvo/templates/pages/page-home.hbs
+++ b/db/configurations/scvo/templates/pages/page-home.hbs
@@ -68,6 +68,32 @@
 
 <section class="featured-content">
 
+  <div class="featured-background-image charity-awards" style="background-image: url('https://storage.googleapis.com/scvo-cms/wp-content/uploads/2018/01/SCA-2018-SCVOWEB-MAIN-1400x400.jpg');">
+    <div class="container-fluid">
+      <div class="featured scvo-cms scvo-cms-page scvo-cms-page-20536 mdc-layout-grid">
+        <div class="mdc-layout-grid__inner">
+          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
+            <a href="/scottish-charity-awards">
+              <img alt="Scottish Charity Awards" class="header-text" src="https://storage.googleapis.com/scvo-cms/wp-content/uploads/2018/01/SCA_2018_LOGO_MAIN.png">
+            </a>
+          </div>
+          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone c-align">
+            <div class="mdc-card">
+              <div class="mdc-card-inner">
+                <h3>
+                  Voting is now open for the Scottish Charity Awards 2018!
+                </h3>
+                <p>
+                  Our 40 fabulous finalists have been announced and now is your chance to vote for your favourite to win the People’s Choice Award! Take a look at the shortlist&hellip; and remember, you only have one vote, so make it count! <a href="/scottish-charity-awards">Find out more</a>
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <div class="featured-background-image i-love-charity">
     <div class="container-fluid">
       <div class="featured scvo-cms scvo-cms-page scvo-cms-page-20536 mdc-layout-grid">
@@ -88,26 +114,6 @@
                 </ul>
               </section>
             </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="featured-background-image eu-are-valued" style="background-image: url('https://storage.googleapis.com/scvo-cms/wp-content/uploads/2017/10/eu-are-valued-bg-1400x400.jpg');">
-    <div class="container-fluid">
-      <div class="featured scvo-cms scvo-cms-page scvo-cms-page-20536 mdc-layout-grid">
-        <div class="mdc-layout-grid__inner">
-          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-4-phone">
-            <a href="/projects-campaigns/europe-and-the-third-sector/eu-are-valued">
-              <img alt="#EUareValued" class="header-text" src="https://storage.googleapis.com/scvo-cms/wp-content/uploads/2017/10/eu-are-valued-text.png">
-            </a>
-          </div>
-          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8-desktop mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-4-phone c-align">
-            <p>
-              Here at SCVO, we love charities. We believe every person who works to make a difference to Scottish communities should be valued, and that includes our colleagues who have come from other EU countries to live and work here. Scotland’s third sector is strengthened thanks to their contribution&hellip;
-              <a href="/projects-campaigns/europe-and-the-third-sector/eu-are-valued">Read more</a>
-            </p>
           </div>
         </div>
       </div>
@@ -156,26 +162,20 @@
   </div>
   {{/with ~}}
 
-  <div class="featured-background-image charity-awards" style="background-image: url('https://storage.googleapis.com/scvo-cms/wp-content/uploads/2018/01/SCA-2018-SCVOWEB-MAIN-1400x400.jpg');">
+  <div class="featured-background-image eu-are-valued" style="background-image: url('https://storage.googleapis.com/scvo-cms/wp-content/uploads/2017/10/eu-are-valued-bg-1400x400.jpg');">
     <div class="container-fluid">
       <div class="featured scvo-cms scvo-cms-page scvo-cms-page-20536 mdc-layout-grid">
         <div class="mdc-layout-grid__inner">
-          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
-            <a href="/scottish-charity-awards">
-              <img alt="Scottish Charity Awards" class="header-text" src="https://storage.googleapis.com/scvo-cms/wp-content/uploads/2018/01/SCA_2018_LOGO_MAIN.png">
+          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-4-phone">
+            <a href="/projects-campaigns/europe-and-the-third-sector/eu-are-valued">
+              <img alt="#EUareValued" class="header-text" src="https://storage.googleapis.com/scvo-cms/wp-content/uploads/2017/10/eu-are-valued-text.png">
             </a>
           </div>
-          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone c-align">
-            <div class="mdc-card">
-              <div class="mdc-card-inner">
-                <h3>
-                  The Scottish Charity Awards are back for 2018!
-                </h3>
-                <p>
-                  There are eight award categories – Charity of the Year, Charity Champion, Demonstrating Digital, Pioneering Project, Terrific Trustee, Leading Light, Celebrating Communities and Cracking Campaign – with the winners to be decided by our panel of judges and announced at our awards ceremony on June 14th at the EICC in Edinburgh. <a href="/scottish-charity-awards">Read more</a>
-                </p>
-              </div>
-            </div>
+          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8-desktop mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-4-phone c-align">
+            <p>
+              Here at SCVO, we love charities. We believe every person who works to make a difference to Scottish communities should be valued, and that includes our colleagues who have come from other EU countries to live and work here. Scotland’s third sector is strengthened thanks to their contribution&hellip;
+              <a href="/projects-campaigns/europe-and-the-third-sector/eu-are-valued">Read more</a>
+            </p>
           </div>
         </div>
       </div>
