--- a/db/configurations/goodmoves/partials/vacancy/full.hbs
+++ b/db/configurations/goodmoves/partials/vacancy/full.hbs
@@ -43,7 +43,7 @@
             {{#if organisation.website ~}}
             <li class="mdc-card__info--vacancy-website mdc-typography--body1">
               <span class="fa-li"><span class="far fa-link fa-fw" title="Website"></span></span>
-              <a href="{{organisation.website_url}}">
+              <a href="{{organisation_website_url}}">
                 {{organisation.website}}
               </a>
             </li>
