--- a/db/configurations/goodmoves/templates/organisations/organisation.hbs
+++ b/db/configurations/goodmoves/templates/organisations/organisation.hbs
@@ -6,9 +6,106 @@
           {{> search_form}}
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9-desktop mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-4-phone content page-content">
-          {{#each data.primaryResponse.hits.hits ~}}
-          {{> organisation_full _source}}
+          {{#with data.primaryResponse.hits.hits.[0]._source as |organisation| ~}}
+          <div class="mdc-card full" data-organisation-id="{{Id}}">
+            <div class="mdc-card__info--organisation-row">
+              <div class="mdc-card__info--organisation">
+                <div class="mdc-card__info--organisation-title mdc-typography--headline">
+                  <h1>
+                    {{{organisation.title}}}
+                  </h1>
+                </div>
+                <div class="detailed-info">
+                  {{#if organisation.description ~}}
+                  <div class="mdc-typography--body1">
+                    {{{organisation.description}}}
+                  </div>
+                  {{/if ~}}
+                </div>
+              </div>
+              {{#with data.supplimentaryResponses.vacancies.hits.hits.[0]._source ~}}
+              {{#if has_logo ~}}
+              <div class="mdc-card__media mdc-card__media--square mdc-card__media--organisation">
+                <img src="{{logo_url}}" alt="{{name}}" />
+              </div>
+              {{/if ~}}
+              {{/with ~}}
+            </div>
+            <div class="mdc-card__info--organisation-row">
+              <div class="key-info-extra">
+                <ul class="fa-ul">
+                  {{#if organisation.website ~}}
+                  <li class="mdc-card__info--vacancy-website mdc-typography--body1">
+                    <span class="fa-li"><span class="far fa-link fa-fw" title="Website"></span></span>
+                    <a href="{{organisation.website_url}}">
+                      {{organisation.website}}
+                    </a>
+                  </li>
+                  {{/if ~}}
+                </ul>
+              </div>
+            </div>
+          </div>
+
+          {{#if ../data.supplimentaryResponses.vacancies.hits.hits ~}}
+          <hr />
+          <h2>Current vacancies</h2>
+          {{#each ../data.supplimentaryResponses.vacancies.hits.hits ~}}
+          {{> vacancy_search_result _source}}
           {{/each ~}}
+          {{/if ~}}
+
+          <hr />
+          <h2>Find out more about {{{organisation.title}}} on <a href="https://goodhq.org">Good HQ</a></h2>
+          {{#compare ../data.goodhq.volunteering.hits.total ">" 0 ~}}
+          <h3>Volunteering opportunities</h3>
+          <div class="mdc-layout-grid equal-height">
+            <div class="mdc-layout-grid__inner">
+              {{#each ../data.goodhq.volunteering.hits.hits ~}}
+              <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
+                {{{_source.rendered.goodhq_list}}}
+              </div>
+              {{/each ~}}
+            </div>
+          </div>
+          {{#compare ../data.goodhq.volunteering.hits.total ">" 3 ~}}
+          <p class="mdc-typography--body1"><a href="https://goodhq.org/{{organisation.goodhq_organisation.xid}}">Read more on Good HQ</a></p>
+          {{/compare ~}}
+          {{/compare ~}}
+
+          {{#compare ../data.goodhq.posts.hits.total ">" 0 ~}}
+          <h3>Posts</h3>
+          <div class="mdc-layout-grid equal-height">
+            <div class="mdc-layout-grid__inner">
+              {{#each ../data.goodhq.posts.hits.hits ~}}
+              <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
+                {{{_source.rendered.goodhq_list}}}
+              </div>
+              {{/each ~}}
+            </div>
+          </div>
+          {{#compare ../data.goodhq.posts.hits.total ">" 3 ~}}
+          <p class="mdc-typography--body1"><a href="https://goodhq.org/{{organisation.goodhq_organisation.xid}}">Read more on Good HQ</a></p>
+          {{/compare ~}}
+          {{/compare ~}}
+
+          {{#compare ../data.goodhq.reviews.hits.total ">" 0 ~}}
+          <h3>Reviews</h3>
+          <div class="mdc-layout-grid equal-height">
+            <div class="mdc-layout-grid__inner">
+              {{#each ../data.goodhq.reviews.hits.hits ~}}
+              <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
+                {{{_source.rendered.goodhq_list}}}
+              </div>
+              {{/each ~}}
+            </div>
+          </div>
+          {{#compare ../data.goodhq.reviews.hits.total ">" 3 ~}}
+          <p class="mdc-typography--body1"><a href="https://goodhq.org/{{organisation.goodhq_organisation.xid}}">Read more on Good HQ</a></p>
+          {{/compare ~}}
+          {{/compare ~}}
+
+          {{/with ~}}
         </div>
       </div>
     </div>
