--- a/db/configurations/goodmoves/templates/organisations/organisation.hbs
+++ b/db/configurations/goodmoves/templates/organisations/organisation.hbs
@@ -69,7 +69,7 @@
             </div>
           </div>
           {{#compare ../data.goodhq.volunteering.hits.total ">" 3 ~}}
-          <p class="mdc-typography--body1"><a href="https://goodhq.org/{{organisation.goodhq_organisation.xid}}">Read more on Good HQ</a></p>
+          <p class="mdc-typography--body1"><a href="https://goodhq.org/{{organisation.goodhq_organisation.xid}}?mode=volopp">Read more on Good HQ</a></p>
           {{/compare ~}}
           {{/compare ~}}
 
@@ -85,7 +85,7 @@
             </div>
           </div>
           {{#compare ../data.goodhq.posts.hits.total ">" 3 ~}}
-          <p class="mdc-typography--body1"><a href="https://goodhq.org/{{organisation.goodhq_organisation.xid}}">Read more on Good HQ</a></p>
+          <p class="mdc-typography--body1"><a href="https://goodhq.org/{{organisation.goodhq_organisation.xid}}?mode=post">Read more on Good HQ</a></p>
           {{/compare ~}}
           {{/compare ~}}
 
@@ -101,7 +101,7 @@
             </div>
           </div>
           {{#compare ../data.goodhq.reviews.hits.total ">" 3 ~}}
-          <p class="mdc-typography--body1"><a href="https://goodhq.org/{{organisation.goodhq_organisation.xid}}">Read more on Good HQ</a></p>
+          <p class="mdc-typography--body1"><a href="https://goodhq.org/{{organisation.goodhq_organisation.xid}}?mode=review">Read more on Good HQ</a></p>
           {{/compare ~}}
           {{/compare ~}}
 
