--- a/db/configurations/goodmoves/partials/vacancy/search-result.hbs
+++ b/db/configurations/goodmoves/partials/vacancy/search-result.hbs
@@ -10,7 +10,7 @@
   <div class="mdc-card__actions">
     <div class="mdc-card__action-buttons demo-card__action-buttons--text-only mdc-card__actions--full-bleed">
       <a href="/vacancy/{{slug}}" class="mdc-card__action">Find out more</a>
-      <a href="/vacancy/{{slug}}/apply" class="mdc-card__action">Apply</a>
+      <a href="/vacancy/{{slug}}#apply" class="mdc-card__action">Apply</a>
     </div>
     <div class="mdc-card__action-icons pull-right">
       <button type="button" onclick="goodmoves.toggleShortlistItem('{{Id}}');" class="mdc-card__action mdc-card__action--shortlist" title="Add to shortlist">
