--- a/db/configurations/goodmoves/templates/organisations/organisation.hbs
+++ b/db/configurations/goodmoves/templates/organisations/organisation.hbs
@@ -10,11 +10,10 @@
           <div class="mdc-card full" data-organisation-id="{{Id}}">
             <div class="mdc-card__info--organisation-row">
               <div class="mdc-card__info--organisation">
-                <div class="mdc-card__info--organisation-title mdc-typography--headline">
-                  <h1>
-                    {{{organisation.title}}}
-                  </h1>
+                <div class="mdc-card__info--organisation-title mdc-typography--headline3">
+                  {{{organisation.title}}}
                 </div>
+                {{{organisation.rendered.goodmoves_charity_info}}}
                 <div class="detailed-info">
                   {{#if organisation.description ~}}
                   <div class="mdc-typography--body1">
@@ -49,16 +48,22 @@
 
           {{#if ../data.supplimentaryResponses.vacancies.hits.hits ~}}
           <hr />
-          <h2>Current vacancies</h2>
+          <div class="mdc-typography--headline4">
+            Current vacancies
+          </div>
           {{#each ../data.supplimentaryResponses.vacancies.hits.hits ~}}
-          {{> vacancy_search_result _source}}
+          {{> vacancy_list _source}}
           {{/each ~}}
           {{/if ~}}
 
           <hr />
-          <h2>Find out more about {{{organisation.title}}} on <a href="https://goodhq.org">Good HQ</a></h2>
+          <div class="mdc-typography--headline4">
+            Find out more about {{{organisation.title}}} on <a href="https://goodhq.org">Good HQ</a>
+          </div>
           {{#compare ../data.goodhq.volunteering.hits.total ">" 0 ~}}
-          <h3>Volunteering opportunities</h3>
+          <div class="mdc-typography--headline5">
+            Volunteering opportunities
+          </div>
           <div class="mdc-layout-grid equal-height">
             <div class="mdc-layout-grid__inner">
               {{#each ../data.goodhq.volunteering.hits.hits ~}}
@@ -69,12 +74,16 @@
             </div>
           </div>
           {{#compare ../data.goodhq.volunteering.hits.total ">" 3 ~}}
-          <p class="mdc-typography--body1"><a href="https://goodhq.org/{{organisation.goodhq_organisation.xid}}?mode=volopp">Read more on Good HQ</a></p>
+          <p class="mdc-typography--body1">
+            <a href="https://goodhq.org/{{organisation.goodhq_organisation.xid}}?mode=volopp">Find more on Good HQ</a>
+          </p>
           {{/compare ~}}
           {{/compare ~}}
 
           {{#compare ../data.goodhq.posts.hits.total ">" 0 ~}}
-          <h3>Posts</h3>
+          <div class="mdc-typography--headline5">
+            Posts
+          </div>
           <div class="mdc-layout-grid equal-height">
             <div class="mdc-layout-grid__inner">
               {{#each ../data.goodhq.posts.hits.hits ~}}
@@ -85,12 +94,16 @@
             </div>
           </div>
           {{#compare ../data.goodhq.posts.hits.total ">" 3 ~}}
-          <p class="mdc-typography--body1"><a href="https://goodhq.org/{{organisation.goodhq_organisation.xid}}?mode=post">Read more on Good HQ</a></p>
+          <p class="mdc-typography--body1">
+            <a href="https://goodhq.org/{{organisation.goodhq_organisation.xid}}?mode=post">Read more posts on Good HQ</a>
+          </p>
           {{/compare ~}}
           {{/compare ~}}
 
           {{#compare ../data.goodhq.reviews.hits.total ">" 0 ~}}
-          <h3>Reviews</h3>
+          <div class="mdc-typography--headline5">
+            Reviews
+          </div>
           <div class="mdc-layout-grid equal-height">
             <div class="mdc-layout-grid__inner">
               {{#each ../data.goodhq.reviews.hits.hits ~}}
@@ -101,7 +114,9 @@
             </div>
           </div>
           {{#compare ../data.goodhq.reviews.hits.total ">" 3 ~}}
-          <p class="mdc-typography--body1"><a href="https://goodhq.org/{{organisation.goodhq_organisation.xid}}?mode=review">Read more on Good HQ</a></p>
+          <p class="mdc-typography--body1">
+            <a href="https://goodhq.org/{{organisation.goodhq_organisation.xid}}?mode=review">Read more reviews on Good HQ</a>
+          </p>
           {{/compare ~}}
           {{/compare ~}}
 
