Added SCVO logo to header

--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -34,8 +34,8 @@ header {
   .container-fluid {
     padding: 0;
     .mdc-top-app-bar__section--align-start {
-      background-image: linear-gradient(60deg, $mdc-theme-primary, $mdc-theme-primary 261px, $mdc-theme-old 262px, $mdc-theme-old);
-      min-width: 262px;
+      background-image: linear-gradient(60deg, $mdc-theme-primary, $mdc-theme-primary 320px, $mdc-theme-old 321px, $mdc-theme-old);
+      min-width: 321px;
     }
     .mdc-top-app-bar__section--align-end {
       background-image: linear-gradient(60deg, $mdc-theme-old, $mdc-theme-old 63px, white 64px, white);
@@ -48,11 +48,18 @@ header {
       a:hover {
         text-decoration: none;
       }
+      img.brand-logo {
+        height: 60px;
+        position: absolute;
+        clip: rect(0px,60px,60px,0px);
+        top: 0px;
+      }
       svg {
         //position: absolute;
         //top: 4px;
         //left: 0;
-        margin-top: 14px;
+        margin-left: 70px;
+        margin-top: 0.75rem;
       }
       .tagline {
         color: white;
@@ -60,6 +67,7 @@ header {
         position: absolute;
         bottom: 1px;
         left: 0;
+        display: none;
       }
     }
     .mdc-top-app-bar__section {
