--- a/db/configurations/goodmoves/layouts/default.hbs
+++ b/db/configurations/goodmoves/layouts/default.hbs
@@ -100,9 +100,10 @@ if(location.host.indexOf('.local') > -1){
               </span>
               <span class="mdc-top-app-bar__title hide-sm">
                 <a href="/">
-                  <svg width="222" height="60" xmlns="http://www.w3.org/2000/svg">
+                  <img src="/assets/images/scvo-logo.png" class="brand-logo" alt="Scottish Council for Voluntary Organisations" />
+                  <svg width="260" height="48" xmlns="http://www.w3.org/2000/svg">
                     <metadata id="metadata7">image/svg+xml</metadata>
-                    <g transform="scale(0.70)">
+                    <g transform="scale(0.80)">
                       <title>Goodmoves</title>
                       <g font-style="normal" font-weight="normal" font-size="40px" font-family="sans-serif" fill="#ffffff" stroke-width="1px" id="flowRoot3336">
                         <path id="path4662" d="m24.360004,27.719999q0,-3.9 -2.16,-6.12q-2.16,-2.22 -5.34,-2.22q-3.18,0 -5.52,2.22q-2.28,2.22 -2.28,6.06q0,3.84 2.22,6.24q2.28,2.34 5.52,2.34q3.24,0 5.4,-2.34q2.16,-2.34 2.16,-6.18zm1.26,11.34q-4.26,4.74 -10.62,4.74q-6.3,0 -10.68,-4.26q-4.32,-4.32 -4.32,-11.46q0,-7.2 4.44,-11.76q4.5,-4.62 10.26,-4.62q5.76,0 9.54,4.74l0,-4.26l9,0l0,28.14q0,4.32 -1.5,7.68q-1.5,3.36 -4.02,5.28q-4.98,3.96 -11.76,3.96q-3.6,0 -7.38,-1.2q-3.72,-1.14 -6.54,-3.3l3.48,-6.78q4.44,3.36 9.36,3.36q4.98,0 7.86,-2.46q2.88,-2.46 2.88,-7.8z"
@@ -122,7 +123,7 @@ if(location.host.indexOf('.local') > -1){
                         />
                         <path id="path4678" d="m316.56373,34.98q0,4.56 -3.3,7.32q-3.3,2.7 -8.46,2.7q-3.48,0 -7.26,-1.26q-3.72,-1.26 -6.6,-3.54l3.24,-5.22q5.58,4.2 10.8,4.2q2.28,0 3.6,-1.02q1.32,-1.08 1.32,-2.7q0,-2.4 -6.36,-4.32q-0.48,-0.18 -0.72,-0.24q-9.96,-2.7 -9.96,-9q0,-4.44 3.42,-7.08q3.48,-2.7 9,-2.7q5.52,0 10.44,3.24l-2.52,4.98q-3.9,-2.58 -8.46,-2.58q-2.4,0 -3.9,0.9q-1.5,0.84 -1.5,2.58q0,1.56 1.56,2.28q1.08,0.54 3,1.02q1.98,0.48 3.48,0.96c0.96,0.36 1.92,0.72 2.88,1.08q1.44,0.6 3.06,1.68q3.24,2.16 3.24,6.72z"
                         />
-                        <text font-size="17px" y="73" x="0" textLength="317" lengthAdjust="spacing">charity &amp; voluntary sector recruitment</text>
+                        <!-- <text font-size="17px" y="73" x="0" textLength="317" lengthAdjust="spacing">charity &amp; voluntary sector recruitment</text> -->
                       </g>
                     </g>
                   </svg>
