--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -164,6 +164,18 @@ footer h3,
 .mdc-typography--body1 {
   font-size: 1rem;
 }
+.mdc-typography--headline3 {
+  font-size: 2.4rem;
+  line-height: 2.65rem;
+}
+.mdc-typography--headline4 {
+  font-size: 1.9rem;
+  line-height: 2.1rem;
+}
+.mdc-typography--headline5 {
+  font-size: 1.75rem;
+  line-height: 1.9rem;
+}
 .mdc-card__title,
 .mdc-textfield__label,
 .mdc-typography--title,
