--- a/db/configurations/goodmoves/layouts/default.hbs
+++ b/db/configurations/goodmoves/layouts/default.hbs
@@ -331,7 +331,7 @@ if(location.host.indexOf('.local') > -1){
                   </p>
                 </div>
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
-                  <a href="/" class="brand-logo" title="Scottish Council for Voluntary Organisations">
+                  <a href="https://scvo.org" class="brand-logo" title="Scottish Council for Voluntary Organisations">
                     <img src="/assets/images/scvo-logo.png" alt="Scottish Council for Voluntary Organisations" />
                   </a>
                 </div>
