--- a/db/configurations/goodmoves/templates/jobs/search-foot.hbs
+++ b/db/configurations/goodmoves/templates/jobs/search-foot.hbs
@@ -1,30 +1,22 @@
+<script src="https://cdnjs.cloudflare.com/ajax/libs/typeahead.js/0.11.1/typeahead.bundle.min.js"></script>
+<script src="/assets/js/goodmoves/search.js" async defer></script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBJdxcQpVKQ6HdrjnPXycUoZqsmp-Ep3l0&libraries=places&region=uk&callback=initMap" async defer></script>
 <script>
-var autocompletePerm, autocompleteTemp;
-function initMap() {
-  var autocompletePermEl = $('#perm-location')[0];
-  var autocompleteTempEl = $('#temp-location')[0];
-
-  var autocompleteOptions = {
-    'types': ['(cities)'],
-    'componentRestrictions': {
-      'country': 'gb'
-    }
-  };
-  autocompletePerm = new google.maps.places.Autocomplete(autocompletePermEl, autocompleteOptions);
-  autocompleteTemp = new google.maps.places.Autocomplete(autocompleteTempEl, autocompleteOptions);
-
-  autocompletePerm.addListener('place_changed', autocompleteChange);
-  autocompleteTemp.addListener('place_changed', autocompleteChange);
-}
-
-function autocompleteChange(evt) {
-  var place = this.getPlace();
-  console.log(place.formatted_address);
-  if (place.geometry.location) {
-    $('[name="lat"]').val(place.geometry.location.lat());
-    $('[name="lng"]').val(place.geometry.location.lng());
-    $('[name="location"]').val(place.formatted_address);
-  }
-}
+var terms = {
+  sectors: [
+    {{#each data.terms.types.aggregations.sectors.buckets ~}}
+    { field: 'sectors', term: {{{stringify key}}} },
+    {{/each ~}}
+  ],
+  roles: [
+    {{#each data.terms.types.aggregations.roles.buckets ~}}
+    { field: 'roles', term: {{{stringify key}}} },
+    {{/each ~}}
+  ],
+  role_status: [
+    {{#each data.terms.types.aggregations.role_status.buckets ~}}
+    { field: 'role_status', term: {{{stringify key}}} },
+    {{/each ~}}
+  ]
+};
 </script>
