--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -486,11 +486,20 @@ a {
 
 /* Maps */
 #map-full {
-  height: 800px;
-  min-height: 100px;
-  max-height: 66.666vh;
-  width: 100%;
+  position: fixed !important;
+  top: 0 !important;
+  left: 0 !important;
+  width: 100vw !important;
+  height: 100vh !important;
 }
+
+.goodmoves-job-search {
+  position: relative;
+  .search-bar-cell {
+    background-color: #fff;
+  }
+}
+
 .map-content {
   h3 {
     margin: 0;
@@ -741,6 +750,7 @@ body {
 // Footer ======================================================================
 
 footer {
+  position: relative;
   border-top: .6rem solid $mdc-theme-primary-light;
   background-color: $mdc-theme-primary;
   background-image: linear-gradient(
@@ -905,7 +915,7 @@ footer {
 
 .h-padding {
   padding-left: $unit/2;
-  padding-bottom: $unit/2;
+  padding-right: $unit/2;
 }
 
 .t-padding { padding-top: $unit/2; }
@@ -924,13 +934,17 @@ footer {
 
 .h-margin {
   margin-left: $unit/2;
-  margin-bottom: $unit/2;
+  margin-right: $unit/2;
 }
 
 .t-margin { margin-top: $unit/2; }
 .b-margin { margin-bottom: $unit/2; }
 .l-margin { margin-left: $unit/2; }
 .r-margin { margin-right: $unit/2; }
+
+.fullwidth {
+  width: 100% !important;
+}
 
 @media (max-width: $mobile-breakpoint) {
   .hide-sm {
