--- a/db/configurations/goodmoves/templates/pages/home-foot.hbs
+++ b/db/configurations/goodmoves/templates/pages/home-foot.hbs
@@ -13,9 +13,9 @@ var terms = {
     { field: 'roles', term: {{{stringify key}}} },
     {{/each ~}}
   ],
-  statuses: [
-    {{#each data.terms.types.aggregations.statuses.buckets ~}}
-    { field: 'statuses', term: {{{stringify key}}} },
+  role_status: [
+    {{#each data.terms.types.aggregations.role_status.buckets ~}}
+    { field: 'role_status', term: {{{stringify key}}} },
     {{/each ~}}
   ]
 };
