--- a/db/configurations/goodmoves/partials/search-form.hbs
+++ b/db/configurations/goodmoves/partials/search-form.hbs
@@ -1,24 +1,24 @@
 {{#*inline "term_checkbox"}}
-  <div class="mdc-form-field">
-    <div class="mdc-checkbox">
-      <input type="checkbox" class="mdc-checkbox__native-control" id="{{instance_id}}_{{field}}_{{key}}" 
-        name="{{field}}[]" value="{{key}}" {{#if (contains selected key)}}checked{{/if}} />
-      <div class="mdc-checkbox__background">
-        <svg class="mdc-checkbox__checkmark"
-             viewBox="0 0 24 24">
-          <path class="mdc-checkbox__checkmark-path"
-                fill="none"
-                stroke="white"
-                d="M1.73,12.91 8.1,19.28 22.79,4.59"/>
-        </svg>
-        <div class="mdc-checkbox__mixedmark"></div>
-      </div>
-    </div>
-    <label for="{{instance_id}}_{{field}}_{{key}}">{{key}}</label>
+<div class="mdc-form-field">
+  <div class="mdc-checkbox">
+    <input type="checkbox" class="mdc-checkbox__native-control" id="{{instance_id}}_{{field}}_{{key}}"
+    name="{{field}}[]" value="{{key}}" {{#if (contains selected key)}}checked{{/if}} />
+    <div class="mdc-checkbox__background">
+      <svg class="mdc-checkbox__checkmark"
+      viewBox="0 0 24 24">
+      <path class="mdc-checkbox__checkmark-path"
+      fill="none"
+      stroke="white"
+      d="M1.73,12.91 8.1,19.28 22.79,4.59"/>
+    </svg>
+    <div class="mdc-checkbox__mixedmark"></div>
   </div>
+</div>
+<label for="{{instance_id}}_{{field}}_{{key}}">{{key}}</label>
+</div>
 {{/inline}}
 
-<header class="mdc-drawer__header hide-md hide-lg">
+<!-- <header class="mdc-drawer__header hide-md hide-lg">
   <div class="mdc-drawer__header-content mdc-theme--primary-bg">
     <h2 class="mdc-drawer__content-heading mdc-theme--primary-bg mdc-theme--on-primary hide-sm">Search jobs</h2>
     <div id="search-tab-bar" class="mdc-tab-bar fullwidth" data-mdc-auto-init="MDCTabBar">
@@ -33,15 +33,15 @@
       <span class="mdc-tab-bar__indicator"></span>
     </div>
   </div>
-</header>
+</header> -->
 <div class="mdc-drawer__content">
   <h2 class="mdc-drawer__content-heading mdc-theme--primary-bg mdc-theme--on-primary hide-sm">Search jobs</h2>
   <div id="search-tab-bar" class="mdc-tab-bar fullwidth" data-mdc-auto-init="MDCTabBar">
-    <a class="mdc-tab" href="#map" onclick="mapView()">
+    <a class="mdc-tab" onclick="mapView()">
       <span class="far fa-map-marker-alt fa-fw" title="Location"></span>
       Map
     </a>
-    <a class="mdc-tab mdc-tab--active" href="#details" id="detailed-results" onclick="detailsView()">
+    <a class="mdc-tab mdc-tab--active" id="detailed-results" onclick="detailsView()">
       <span class="far fa-list fa-fw" title="Location"></span>
       List
     </a>
@@ -105,17 +105,17 @@
 
     <h3 class="mdc-drawer__content-heading mdc-theme--primary-bg mdc-theme--on-primary">Roles</h3>
     {{#each data.supplimentaryResponses.types.aggregations.roles.buckets ~}}
-      {{> term_checkbox key=key field="roles" selected=../request.params.query.roles}}
+    {{> term_checkbox key=key field="roles" selected=../request.params.query.roles}}
     {{/each ~}}
 
     <h3 class="mdc-drawer__content-heading mdc-theme--primary-bg mdc-theme--on-primary">Sectors</h3>
     {{#each data.supplimentaryResponses.types.aggregations.sectors.buckets ~}}
-      {{> term_checkbox key=key field="sectors" selected=../request.params.query.sectors}}
+    {{> term_checkbox key=key field="sectors" selected=../request.params.query.sectors}}
     {{/each ~}}
 
     <h3 class="mdc-drawer__content-heading mdc-theme--primary-bg mdc-theme--on-primary">Statuses</h3>
     {{#each data.supplimentaryResponses.types.aggregations.statuses.buckets ~}}
-      {{> term_checkbox key=key field="role_status" selected=../request.params.query.role_status}}
+    {{> term_checkbox key=key field="role_status" selected=../request.params.query.role_status}}
     {{/each ~}}
 
     <button class="mdc-button mdc-button--raised mdc-button--fullwidth h-margin v-margin" type="submit">
