--- a/db/configurations/goodmoves/templates/jobs/search.hbs
+++ b/db/configurations/goodmoves/templates/jobs/search.hbs
@@ -1,13 +1,11 @@
-<div id="map-full"></div>
-
 <div class="goodmoves-job-search mdc-layout-grid">
   <div class="mdc-layout-grid__inner">
     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-4-tablet hide-sm search-bar-cell">
       {{> search_form this instance_id="perm"}}
+      <div id="map-full" class="hidden"></div>
     </div>
     <div id="detailed-results-container" class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-12-phone">
       {{> search_results this}}
     </div>
   </div>
 </div>
-
