--- a/db/configurations/goodmoves/templates/pages/home.hbs
+++ b/db/configurations/goodmoves/templates/pages/home.hbs
@@ -1,8 +1,10 @@
 <div class="container-fluid">
   <div class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner">
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-4-phone">
-        <div class="search-overlay">
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-desktop mdc-layout-grid__cell--span-1-tablet mdc-layout-grid__cell--span-4-phone">
+      </div>
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8-desktop mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-4-phone">
+        <div class="">
           <h2 class="mdc-drawer__content-heading mdc-theme--primary-bg mdc-theme--on-primary hide-sm">Search jobs</h2>
           <section id="search-overlay" class="search-overlay-panel">
             <div class="mdc-text-field mdc-text-field--outlined" data-mdc-auto-init="MDCTextField">
@@ -46,6 +48,15 @@
       </div>
     </div>
   </div>
+
+  <p>Your saved searches (if authenticated)</p>
+
+  <p>Your shortlist (if authenticated)</p>
+
+  <p>Top jobs</p>
+
+  <p>Latest jobs</p>
+
 </div>
 
 {{> currently_recruiting}}
